# DDE-repo

./: .gitignore  Makefile  README.md  data_loader.py  environment.yml  pyproject.toml  setup.cfg
api_example/: README.md  api_reader.py
etl/: __init__.py  extract.py  load.py  main.py  transform.py
experiments/: api_reader.py
gc_etl/: __init__.py  extract.py  load.py  main.py  transform.py
notebooks/: EDA.ipynb  dtypes.ipynb
reports/: EDA.ipynb
src/: write_to_db.py
